SERVER-41009 TimestampMonitor and getOldestActiveTimestamp shouldn't conflict with PBWM lock